--- a/app/templates/pantry.html
+++ b/app/templates/pantry.html
@@ -37,7 +37,9 @@
         <!-- Pantry List -->
         <h2>My Pantry</h2>
         <div id="ingredient-list-container">
-            {% include '_ingredients_list.html' with {'ingredients': ingredients, 'show_edit_buttons': True} %}
+            {% with show_edit_buttons=True %}
+                {% include '_ingredients_list.html' %}
+            {% endwith %}
         </div>
     </div>
 </body>
